--- a/src/partials/bose-nc.html
+++ b/src/partials/bose-nc.html
@@ -1,4 +1,4 @@
-<section class="bose-nc">
+<section class="bose-nc" id="bose-nc" >
     <div class="container">
         <ul class="bose-nc__flex position">
             <li>
