--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="reviews" id="reviews">
     <div class="container">
-        <div id="slideContainer">
+        <div id="slideContainer" class="listic">
             <div class="slider">
                 <div class="list">
                     <div class="item slide show">
@@ -25,9 +25,15 @@
                                     for a
                                     few
                                     moments and relax.</p>
-                                <div class="reviews__column-1">
+                                <!-- <div class="reviews__column-1">
                                     <h3 class="reviews__s">01 -</h3>
                                     <h3 class="reviews__minisubtext">02 - 03 - 04</h3>
+                                </div> -->
+                                <div class="reviews__column-1">
+                                    <button class="reviews__s active" data-slide="1">01 -</button>
+                                    <button class="reviews__minisubtext" data-slide="2">02 -</button>
+                                    <button class="reviews__minisubtext" data-slide="3">03 -</button>
+                                    <button class="reviews__minisubtext">04</button>
                                 </div>
                             </li>
                         </ul>
@@ -52,9 +58,10 @@
                                     sound.
                                 </p>
                                 <div class="reviews__column-2">
-                                    <h3 class="reviews__minisubtext">01 -</h3>
-                                    <p class="reviews__s">02 -</p>
-                                    <h3 class="reviews__minisubtext">03 - 04</h3>
+                                    <button class="reviews__minisubtext" data-slide="1">01 -</button>
+                                    <button class="reviews__s active" data-slide="2">02 -</button>
+                                    <button class="reviews__minisubtext" data-slide="3">03 -</button>
+                                    <button class="reviews__minisubtext">04</button>
                                 </div>
                             </li>
                         </ul>
@@ -77,14 +84,15 @@
                                     and for
                                     self-care.</p>
                                 <div class="reviews__column-3">
-                                    <h3 class="reviews__minisubtext">01 - 02 -</h3>
-                                    <p class="reviews__s">03 -</p>
-                                    <h3 class="reviews__minisubtext">04</h3>
+                                    <button class="reviews__minisubtext" data-slide="1">01 -</button>
+                                    <button class="reviews__minisubtext" data-slide="2">02 -</button>
+                                    <button class="reviews__s active" data-slide="3">03 -</button>
+                                    <button class="reviews__minisubtext">04</button>
                                 </div>
                             </li>
                         </ul>
                     </div>
-                    <div class="item slide">
+                      <div class="item slide">
                         <ul class="reviews__fix">
                             <li class="reviews__box">
                                 <h2 class="reviews__subtitle">REVIEWS</h2>
@@ -106,9 +114,15 @@
                                     for a
                                     few
                                     moments and relax.</p>
-                                <div class="reviews__column-1">
+                                 <div class="reviews__column-1">
                                     <h3 class="reviews__s">01 -</h3>
                                     <h3 class="reviews__minisubtext">02 - 03 - 04</h3>
+                                </div> 
+                                <div class="reviews__column-1">
+                                    <button class="reviews__s active" data-slide="1">01 -</button>
+                                    <button class="reviews__minisubtext" data-slide="2">02 -</button>
+                                    <button class="reviews__minisubtext" data-slide="3">03 -</button>
+                                    <button class="reviews__minisubtext">04</button>
                                 </div>
                             </li>
                         </ul>
@@ -127,13 +141,16 @@
                                 <h2 class="reviews__title">REVIEWS</h2>
                                 <h3 class="reviews__texted">Bose Сorporation</h3>
                                 <p class="reviews__text-2">Bose Noise Cancelling Headphones 700 deliver everything you
-                                    expect — and
+                                    expect
+                                    — and
                                     things you never imagined possible. The perfect balance of quiet, comfort, and
-                                    sound.</p>
+                                    sound.
+                                </p>
                                 <div class="reviews__column-2">
-                                    <h3 class="reviews__minisubtext">01 -</h3>
-                                    <p class="reviews__s">02 -</p>
-                                    <h3 class="reviews__minisubtext">03 - 04</h3>
+                                    <button class="reviews__minisubtext" data-slide="1">01 -</button>
+                                    <button class="reviews__s active" data-slide="2">02 -</button>
+                                    <button class="reviews__minisubtext" data-slide="3">03 -</button>
+                                    <button class="reviews__minisubtext">04</button>
                                 </div>
                             </li>
                         </ul>
@@ -152,16 +169,18 @@
                                 <h2 class="reviews__title">REVIEWS</h2>
                                 <h3 class="reviews__texted">Bose Сorporation</h3>
                                 <p class="reviews__text-3">Real stories of people tuning in or out to feel peace, find
-                                    escape, and for
+                                    escape,
+                                    and for
                                     self-care.</p>
                                 <div class="reviews__column-3">
-                                    <h3 class="reviews__minisubtext">01 - 02 -</h3>
-                                    <p class="reviews__s">03 -</p>
-                                    <h3 class="reviews__minisubtext">04</h3>
+                                    <button class="reviews__minisubtext" data-slide="1">01 -</button>
+                                    <button class="reviews__minisubtext" data-slide="2">02 -</button>
+                                    <button class="reviews__s active" data-slide="3">03 -</button>
+                                    <button class="reviews__minisubtext">04</button>
                                 </div>
                             </li>
                         </ul>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
