--- a/src/sass/sections/_reviews.scss
+++ b/src/sass/sections/_reviews.scss
@@ -81,6 +81,7 @@
         font-style: normal;
         font-weight: 400;
         display: block;
+        background-color: transparent;
         line-height: 125%;
         font-family: "Roboto Condensed";
         font-size: 20px;
@@ -122,6 +123,7 @@
         font-style: normal;
         font-weight: 400;
         display: block;
+        background-color: transparent;
         line-height: 125%;
         opacity: 0.2;
 
