--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,41 +10,19 @@
         </div>
         <h1 class="hero__title">Headphones Bose NC 700</h1>
         <button class="hero__button">
-          <a
-            class="hero__link"
-            href="https://www.bose.com/p/headphones/bose-quietcomfort-ultra-headphones/QCUH-HEADPHONEARN.html?dwvar_QCUH-HEADPHONEARN_color=BLACK&quantity=1"
-            >order</a
-          >
+          <a class="hero__link" href="#">order</a>
         </button>
       </li>
       <li class="hero__item">
         <picture>
-          <source
-            srcset="
-              ./image/desktop/hero-bose@desktop-1x.webp 1x,
-              ./image/desktop/hero-bose@desktop-2x.webp 2x
-            "
-            media="(min-width: 1320px)"
-          />
-          <source
-            srcset="
-              ./image/table/hero-bose@table-1x.webp 1x,
-              ./image/table/hero-bose@table-2x.webp 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ./image/phone/hero-bose@phone-1x.webp 1x,
-              ./image/phone/hero-bose@phone-2x.webp 2x
-            "
-            media="(max-width: 767px)"
-          />
-          <img
-            class="hero__img"
-            alt=""
-            src="./image/phone/hero-bose@phone-1x.webp 1x"
-          />
+            <source srcset="./image/desktop/hero-bose@desktop-1x.webp 1x,
+              ./image/desktop/hero-bose@desktop-2x.webp 2x" media="(min-width: 1320px)" />
+            <source srcset="./image/table/hero-bose@table-1x.webp 1x,
+              ./image/table/hero-bose@table-2x.webp 2x" media="(min-width: 768px)" />
+            <source srcset="./image/phone/hero-bose@phone-1x.webp 1x,
+              ./image/phone/hero-bose@phone-2x.webp 2x" media="(max-width: 767px)" />
+            <img class="hero__img" alt=""
+                src="./image/phone/hero-bose@phone-1x.webp 1x" />
         </picture>
       </li>
     </ul>
