--- a/src/partials/bose-nc.html
+++ b/src/partials/bose-nc.html
@@ -121,7 +121,7 @@
                 <div class="bose-nc__line"></div>
                 <h3 class="bose-nc__minitext">14 999 UAH</h3>
                 <button class="bose-nc__minibutton">
-                    <a class="" href="https://www.bose.com/p/headphones/bose-quietcomfort-ultra-headphones/QCUH-HEADPHONEARN.html?dwvar_QCUH-HEADPHONEARN_color=BLACK&quantity=1">order</a>
+                    <a class="hero__link" href="https://www.bose.com/p/headphones/bose-quietcomfort-ultra-headphones/QCUH-HEADPHONEARN.html?dwvar_QCUH-HEADPHONEARN_color=BLACK&quantity=1">order</a>
                 </button>
             </li>
             <li>
